kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diffusion-api
spec:
  replicas: 1 # Or your desired number
  selector:
    matchLabels:
      app: diffusion
  template:
    metadata:
      labels:
        app: diffusion
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: high-cpu-pool # <--- ADD THIS
      containers:
      - name: api
        image: gcr.io/umd-project-456120/diffusion-api:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "8"
            memory: "16Gi"
          limits:
            cpu: "16" # Limit can be higher than request
            memory: "16Gi"
