kubernetes/service-streamlit.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
spec:
  type: LoadBalancer
  selector:
    app: streamlit
  ports:
    - port: 8501
      targetPort: 8501
