kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diffusion-service
spec:
  selector:
    app: diffusion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
